--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "stripe:setup": "tsx scripts/setup-stripe.ts",
+    "stripe:test-customer": "tsx scripts/create-test-customer.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -37,6 +42,7 @@
     "dotenv": "^17.2.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
+    "motion": "^12.26.2",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
